--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.0",
     "react-responsive-carousel": "^3.1.49",
     "smooth-scroll": "^16.1.0"
