--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.0",
     "react-responsive-carousel": "^3.1.49",
+    "react-scroll-up": "^1.3.3",
     "smooth-scroll": "^16.1.0"
   },
   "keywords": [
